// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`click to show new edge class editor 1`] = `
<div
  id="petc-edge-select-control"
>
  <ul>
    <li
      className={null}
      onClick={[Function]}
    >
      <div
        className="petc-edge-select-element"
      >
        <div
          className="petc-edge-select-node-a"
          id="petc-edge-select-element-default-a"
        />
        <div
          className="petc-edge-select-node-b"
          id="petc-edge-select-element-default-b"
        />
      </div>
      <div>
        default
      </div>
    </li>
    <li
      className={null}
      onClick={[Function]}
    >
      <div
        className="petc-edge-select-element"
      >
        <div
          className="petc-edge-select-node-a"
          id="petc-edge-select-element-red-edge-a"
        />
        <div
          className="petc-edge-select-node-b"
          id="petc-edge-select-element-red-edge-b"
        />
      </div>
      <div>
        red-edge
      </div>
    </li>
    <li
      className={null}
      onClick={[Function]}
    >
      <div
        className="petc-edge-select-element"
      >
        <div
          className="petc-edge-select-node-a"
          id="petc-edge-select-element-blue-edge-a"
        />
        <div
          className="petc-edge-select-node-b"
          id="petc-edge-select-element-blue-edge-b"
        />
      </div>
      <div>
        blue-edge
      </div>
    </li>
    <li
      onClick={[Function]}
    >
       + new 
    </li>
  </ul>
  <div
    className="petc-modal-overlay"
    onClick={[Function]}
  >
    <div
      className="petc-modal petc-json-editor"
      onClick={[Function]}
      style={
        Object {
          "left": "10%",
          "top": "10%",
        }
      }
    >
      <div
        className="petc-json-editor-name"
      >
        name:
        <input
          onChange={[Function]}
          style={null}
          type="text"
        />
      </div>
      <div
        tabIndex="1"
      >
        <div
          className="react-json-view"
          style={
            Object {
              "backgroundColor": "rgba(0, 0, 0, 0)",
              "cursor": "default",
              "fontFamily": null,
              "position": "relative",
            }
          }
        >
          <div
            className="pretty-json-container object-container"
          >
            <div
              className="object-content"
            >
              <div
                className="object-key-val"
              >
                <span>
                  <span
                    onClick={[Function]}
                    style={
                      Object {
                        "cursor": "pointer",
                        "display": "inline-block",
                      }
                    }
                  >
                    <div
                      className="icon-container"
                      style={
                        Object {
                          "display": "inline-block",
                          "width": "17px",
                        }
                      }
                    >
                      <span
                        className="expanded-icon"
                      >
                        <svg
                          fill="currentColor"
                          preserveAspectRatio="xMidYMid meet"
                          style={
                            Object {
                              "color": "#586e75",
                              "height": "1em",
                              "verticalAlign": "middle",
                              "width": "1em",
                            }
                          }
                          viewBox="0 0 24 24"
                        >
                          <path
                            d="M12,20C7.59,20 4,16.41 4,12C4,7.59 7.59,4 12,4C16.41,4 20,7.59 20,12C20,16.41 16.41,20 12,20M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2M7,13H17V11H7"
                          />
                        </svg>
                      </span>
                    </div>
                    <span />
                    <span
                      style={
                        Object {
                          "color": "#002b36",
                          "cursor": "pointer",
                          "display": "inline-block",
                          "fontWeight": "bold",
                        }
                      }
                    >
                      {
                    </span>
                  </span>
                  <div
                    className="object-meta-data"
                    onClick={[Function]}
                    style={
                      Object {
                        "display": "inline-block",
                        "padding": "0px 0px 0px 10px",
                      }
                    }
                  >
                    <span
                      className="click-to-add"
                      style={
                        Object {
                          "verticalAlign": "top",
                        }
                      }
                    >
                      <span
                        className="click-to-add-icon"
                        onClick={[Function]}
                      >
                        <svg
                          fill="currentColor"
                          preserveAspectRatio="xMidYMid meet"
                          style={
                            Object {
                              "color": "#2aa198",
                              "cursor": "pointer",
                              "display": "inline-block",
                              "fontSize": "15px",
                              "height": "1em",
                              "marginRight": "3px",
                              "verticalAlign": "top",
                              "width": "1em",
                            }
                          }
                          viewBox="0 0 40 40"
                        >
                          <g>
                            <path
                              d="m30.1 21.4v-2.8q0-0.6-0.4-1t-1-0.5h-5.7v-5.7q0-0.6-0.4-1t-1-0.4h-2.9q-0.6 0-1 0.4t-0.4 1v5.7h-5.7q-0.6 0-1 0.5t-0.5 1v2.8q0 0.6 0.5 1t1 0.5h5.7v5.7q0 0.5 0.4 1t1 0.4h2.9q0.6 0 1-0.4t0.4-1v-5.7h5.7q0.6 0 1-0.5t0.4-1z m7.2-1.4q0 4.7-2.3 8.6t-6.3 6.2-8.6 2.3-8.6-2.3-6.2-6.2-2.3-8.6 2.3-8.6 6.2-6.2 8.6-2.3 8.6 2.3 6.3 6.2 2.3 8.6z"
                            />
                          </g>
                        </svg>
                      </span>
                    </span>
                  </div>
                </span>
                <div
                  className="pushed-content object-container"
                >
                  <div
                    className="object-content"
                    style={
                      Object {
                        "marginLeft": "6px",
                      }
                    }
                  >
                    <div
                      className="object-key-val"
                      style={
                        Object {
                          ":hover": Object {
                            "borderLeft": "2px solid rgb(235, 235, 235)",
                            "paddingLeft": "19px",
                          },
                          "borderLeft": "1px solid rgb(235, 235, 235)",
                          "paddingBottom": "3px",
                          "paddingLeft": 20,
                          "paddingRight": "5px",
                          "paddingTop": "3px",
                        }
                      }
                    >
                      <span>
                        <span
                          onClick={[Function]}
                          style={
                            Object {
                              "cursor": "pointer",
                              "display": "inline-block",
                            }
                          }
                        >
                          <div
                            className="icon-container"
                            style={
                              Object {
                                "display": "inline-block",
                                "width": "17px",
                              }
                            }
                          >
                            <span
                              className="collapsed-icon"
                            >
                              <svg
                                fill="currentColor"
                                preserveAspectRatio="xMidYMid meet"
                                style={
                                  Object {
                                    "color": "#2aa198",
                                    "height": "1em",
                                    "verticalAlign": "middle",
                                    "width": "1em",
                                  }
                                }
                                viewBox="0 0 24 24"
                              >
                                <path
                                  d="M12,20C7.59,20 4,16.41 4,12C4,7.59 7.59,4 12,4C16.41,4 20,7.59 20,12C20,16.41 16.41,20 12,20M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2M13,7H11V11H7V13H11V17H13V13H17V11H13V7Z"
                                />
                              </svg>
                            </span>
                          </div>
                          <span
                            style={
                              Object {
                                ":hover": Object {
                                  "opacity": "1",
                                },
                                "color": "#002b36",
                                "display": "inline-block",
                                "fontStyle": "none",
                                "letterSpacing": "0.5px",
                                "opacity": "0.85",
                                "verticalAlign": "top",
                              }
                            }
                          >
                            <span
                              className="object-key"
                            >
                              <span
                                style={
                                  Object {
                                    "verticalAlign": "top",
                                  }
                                }
                              >
                                "
                              </span>
                              <span>
                                paintStyle
                              </span>
                              <span
                                style={
                                  Object {
                                    "verticalAlign": "top",
                                  }
                                }
                              >
                                "
                              </span>
                            </span>
                            <span
                              style={
                                Object {
                                  "color": "#002b36",
                                  "display": "inline-block",
                                  "margin": "0px 5px",
                                  "verticalAlign": "top",
                                }
                              }
                            >
                              :
                            </span>
                          </span>
                          <span
                            style={
                              Object {
                                "color": "#002b36",
                                "cursor": "pointer",
                                "display": "inline-block",
                                "fontWeight": "bold",
                              }
                            }
                          >
                            {
                          </span>
                        </span>
                      </span>
                      <div
                        className="node-ellipsis"
                        onClick={[Function]}
                        style={
                          Object {
                            "color": "#cb4b16",
                            "cursor": "pointer",
                            "display": "inline-block",
                            "fontSize": "18px",
                            "lineHeight": "10px",
                          }
                        }
                      >
                        ...
                      </div>
                      <span
                        className="brace-row"
                      >
                        <span
                          style={
                            Object {
                              "color": "#002b36",
                              "cursor": "pointer",
                              "display": "inline-block",
                              "fontWeight": "bold",
                              "paddingLeft": "0px",
                            }
                          }
                        >
                          }
                        </span>
                        <div
                          className="object-meta-data"
                          onClick={[Function]}
                          style={
                            Object {
                              "display": "inline-block",
                              "padding": "0px 0px 0px 10px",
                            }
                          }
                        >
                          <span
                            className="click-to-add"
                            style={
                              Object {
                                "verticalAlign": "top",
                              }
                            }
                          >
                            <span
                              className="click-to-add-icon"
                              onClick={[Function]}
                            >
                              <svg
                                fill="currentColor"
                                preserveAspectRatio="xMidYMid meet"
                                style={
                                  Object {
                                    "color": "#2aa198",
                                    "cursor": "pointer",
                                    "display": "inline-block",
                                    "fontSize": "15px",
                                    "height": "1em",
                                    "marginRight": "3px",
                                    "verticalAlign": "top",
                                    "width": "1em",
                                  }
                                }
                                viewBox="0 0 40 40"
                              >
                                <g>
                                  <path
                                    d="m30.1 21.4v-2.8q0-0.6-0.4-1t-1-0.5h-5.7v-5.7q0-0.6-0.4-1t-1-0.4h-2.9q-0.6 0-1 0.4t-0.4 1v5.7h-5.7q-0.6 0-1 0.5t-0.5 1v2.8q0 0.6 0.5 1t1 0.5h5.7v5.7q0 0.5 0.4 1t1 0.4h2.9q0.6 0 1-0.4t0.4-1v-5.7h5.7q0.6 0 1-0.5t0.4-1z m7.2-1.4q0 4.7-2.3 8.6t-6.3 6.2-8.6 2.3-8.6-2.3-6.2-6.2-2.3-8.6 2.3-8.6 6.2-6.2 8.6-2.3 8.6 2.3 6.3 6.2 2.3 8.6z"
                                  />
                                </g>
                              </svg>
                            </span>
                          </span>
                          <span
                            className="click-to-remove"
                          >
                            <span
                              className="click-to-remove-icon"
                              onClick={[Function]}
                            >
                              <svg
                                fill="currentColor"
                                preserveAspectRatio="xMidYMid meet"
                                style={
                                  Object {
                                    "color": "#cb4b16",
                                    "cursor": "pointer",
                                    "display": "inline-block",
                                    "fontSize": "15px",
                                    "height": "1em",
                                    "marginRight": "3px",
                                    "verticalAlign": "top",
                                    "width": "1em",
                                  }
                                }
                                viewBox="0 0 40 40"
                              >
                                <g>
                                  <path
                                    d="m28.6 25q0-0.5-0.4-1l-4-4 4-4q0.4-0.5 0.4-1 0-0.6-0.4-1.1l-2-2q-0.4-0.4-1-0.4-0.6 0-1 0.4l-4.1 4.1-4-4.1q-0.4-0.4-1-0.4-0.6 0-1 0.4l-2 2q-0.5 0.5-0.5 1.1 0 0.5 0.5 1l4 4-4 4q-0.5 0.5-0.5 1 0 0.7 0.5 1.1l2 2q0.4 0.4 1 0.4 0.6 0 1-0.4l4-4.1 4.1 4.1q0.4 0.4 1 0.4 0.6 0 1-0.4l2-2q0.4-0.4 0.4-1z m8.7-5q0 4.7-2.3 8.6t-6.3 6.2-8.6 2.3-8.6-2.3-6.2-6.2-2.3-8.6 2.3-8.6 6.2-6.2 8.6-2.3 8.6 2.3 6.3 6.2 2.3 8.6z"
                                  />
                                </g>
                              </svg>
                            </span>
                          </span>
                        </div>
                      </span>
                    </div>
                    <div
                      className="object-key-val"
                      style={
                        Object {
                          ":hover": Object {
                            "borderLeft": "2px solid rgb(235, 235, 235)",
                            "paddingLeft": "19px",
                          },
                          "borderLeft": "1px solid rgb(235, 235, 235)",
                          "paddingBottom": "3px",
                          "paddingLeft": 20,
                          "paddingRight": "5px",
                          "paddingTop": "3px",
                        }
                      }
                    >
                      <span>
                        <span
                          onClick={[Function]}
                          style={
                            Object {
                              "cursor": "pointer",
                              "display": "inline-block",
                            }
                          }
                        >
                          <div
                            className="icon-container"
                            style={
                              Object {
                                "display": "inline-block",
                                "width": "17px",
                              }
                            }
                          >
                            <span
                              className="collapsed-icon"
                            >
                              <svg
                                fill="currentColor"
                                preserveAspectRatio="xMidYMid meet"
                                style={
                                  Object {
                                    "color": "#2aa198",
                                    "height": "1em",
                                    "verticalAlign": "middle",
                                    "width": "1em",
                                  }
                                }
                                viewBox="0 0 24 24"
                              >
                                <path
                                  d="M12,20C7.59,20 4,16.41 4,12C4,7.59 7.59,4 12,4C16.41,4 20,7.59 20,12C20,16.41 16.41,20 12,20M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2M13,7H11V11H7V13H11V17H13V13H17V11H13V7Z"
                                />
                              </svg>
                            </span>
                          </div>
                          <span
                            style={
                              Object {
                                ":hover": Object {
                                  "opacity": "1",
                                },
                                "color": "#002b36",
                                "display": "inline-block",
                                "fontStyle": "none",
                                "letterSpacing": "0.5px",
                                "opacity": "0.85",
                                "verticalAlign": "top",
                              }
                            }
                          >
                            <span
                              className="object-key"
                            >
                              <span
                                style={
                                  Object {
                                    "verticalAlign": "top",
                                  }
                                }
                              >
                                "
                              </span>
                              <span>
                                hoverPaintStyle
                              </span>
                              <span
                                style={
                                  Object {
                                    "verticalAlign": "top",
                                  }
                                }
                              >
                                "
                              </span>
                            </span>
                            <span
                              style={
                                Object {
                                  "color": "#002b36",
                                  "display": "inline-block",
                                  "margin": "0px 5px",
                                  "verticalAlign": "top",
                                }
                              }
                            >
                              :
                            </span>
                          </span>
                          <span
                            style={
                              Object {
                                "color": "#002b36",
                                "cursor": "pointer",
                                "display": "inline-block",
                                "fontWeight": "bold",
                              }
                            }
                          >
                            {
                          </span>
                        </span>
                      </span>
                      <div
                        className="node-ellipsis"
                        onClick={[Function]}
                        style={
                          Object {
                            "color": "#cb4b16",
                            "cursor": "pointer",
                            "display": "inline-block",
                            "fontSize": "18px",
                            "lineHeight": "10px",
                          }
                        }
                      >
                        ...
                      </div>
                      <span
                        className="brace-row"
                      >
                        <span
                          style={
                            Object {
                              "color": "#002b36",
                              "cursor": "pointer",
                              "display": "inline-block",
                              "fontWeight": "bold",
                              "paddingLeft": "0px",
                            }
                          }
                        >
                          }
                        </span>
                        <div
                          className="object-meta-data"
                          onClick={[Function]}
                          style={
                            Object {
                              "display": "inline-block",
                              "padding": "0px 0px 0px 10px",
                            }
                          }
                        >
                          <span
                            className="click-to-add"
                            style={
                              Object {
                                "verticalAlign": "top",
                              }
                            }
                          >
                            <span
                              className="click-to-add-icon"
                              onClick={[Function]}
                            >
                              <svg
                                fill="currentColor"
                                preserveAspectRatio="xMidYMid meet"
                                style={
                                  Object {
                                    "color": "#2aa198",
                                    "cursor": "pointer",
                                    "display": "inline-block",
                                    "fontSize": "15px",
                                    "height": "1em",
                                    "marginRight": "3px",
                                    "verticalAlign": "top",
                                    "width": "1em",
                                  }
                                }
                                viewBox="0 0 40 40"
                              >
                                <g>
                                  <path
                                    d="m30.1 21.4v-2.8q0-0.6-0.4-1t-1-0.5h-5.7v-5.7q0-0.6-0.4-1t-1-0.4h-2.9q-0.6 0-1 0.4t-0.4 1v5.7h-5.7q-0.6 0-1 0.5t-0.5 1v2.8q0 0.6 0.5 1t1 0.5h5.7v5.7q0 0.5 0.4 1t1 0.4h2.9q0.6 0 1-0.4t0.4-1v-5.7h5.7q0.6 0 1-0.5t0.4-1z m7.2-1.4q0 4.7-2.3 8.6t-6.3 6.2-8.6 2.3-8.6-2.3-6.2-6.2-2.3-8.6 2.3-8.6 6.2-6.2 8.6-2.3 8.6 2.3 6.3 6.2 2.3 8.6z"
                                  />
                                </g>
                              </svg>
                            </span>
                          </span>
                          <span
                            className="click-to-remove"
                          >
                            <span
                              className="click-to-remove-icon"
                              onClick={[Function]}
                            >
                              <svg
                                fill="currentColor"
                                preserveAspectRatio="xMidYMid meet"
                                style={
                                  Object {
                                    "color": "#cb4b16",
                                    "cursor": "pointer",
                                    "display": "inline-block",
                                    "fontSize": "15px",
                                    "height": "1em",
                                    "marginRight": "3px",
                                    "verticalAlign": "top",
                                    "width": "1em",
                                  }
                                }
                                viewBox="0 0 40 40"
                              >
                                <g>
                                  <path
                                    d="m28.6 25q0-0.5-0.4-1l-4-4 4-4q0.4-0.5 0.4-1 0-0.6-0.4-1.1l-2-2q-0.4-0.4-1-0.4-0.6 0-1 0.4l-4.1 4.1-4-4.1q-0.4-0.4-1-0.4-0.6 0-1 0.4l-2 2q-0.5 0.5-0.5 1.1 0 0.5 0.5 1l4 4-4 4q-0.5 0.5-0.5 1 0 0.7 0.5 1.1l2 2q0.4 0.4 1 0.4 0.6 0 1-0.4l4-4.1 4.1 4.1q0.4 0.4 1 0.4 0.6 0 1-0.4l2-2q0.4-0.4 0.4-1z m8.7-5q0 4.7-2.3 8.6t-6.3 6.2-8.6 2.3-8.6-2.3-6.2-6.2-2.3-8.6 2.3-8.6 6.2-6.2 8.6-2.3 8.6 2.3 6.3 6.2 2.3 8.6z"
                                  />
                                </g>
                              </svg>
                            </span>
                          </span>
                        </div>
                      </span>
                    </div>
                    <div
                      className="object-key-val"
                      style={
                        Object {
                          ":hover": Object {
                            "borderLeft": "2px solid rgb(235, 235, 235)",
                            "paddingLeft": "19px",
                          },
                          "borderLeft": "1px solid rgb(235, 235, 235)",
                          "paddingBottom": "3px",
                          "paddingLeft": 20,
                          "paddingRight": "5px",
                          "paddingTop": "3px",
                        }
                      }
                    >
                      <span>
                        <span
                          onClick={[Function]}
                          style={
                            Object {
                              "cursor": "pointer",
                              "display": "inline-block",
                            }
                          }
                        >
                          <div
                            className="icon-container"
                            style={
                              Object {
                                "display": "inline-block",
                                "width": "17px",
                              }
                            }
                          >
                            <span
                              className="collapsed-icon"
                            >
                              <svg
                                fill="currentColor"
                                preserveAspectRatio="xMidYMid meet"
                                style={
                                  Object {
                                    "color": "#2aa198",
                                    "height": "1em",
                                    "verticalAlign": "middle",
                                    "width": "1em",
                                  }
                                }
                                viewBox="0 0 24 24"
                              >
                                <path
                                  d="M12,20C7.59,20 4,16.41 4,12C4,7.59 7.59,4 12,4C16.41,4 20,7.59 20,12C20,16.41 16.41,20 12,20M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2M13,7H11V11H7V13H11V17H13V13H17V11H13V7Z"
                                />
                              </svg>
                            </span>
                          </div>
                          <span
                            style={
                              Object {
                                ":hover": Object {
                                  "opacity": "1",
                                },
                                "color": "#002b36",
                                "display": "inline-block",
                                "fontStyle": "none",
                                "letterSpacing": "0.5px",
                                "opacity": "0.85",
                                "verticalAlign": "top",
                              }
                            }
                          >
                            <span
                              className="object-key"
                            >
                              <span
                                style={
                                  Object {
                                    "verticalAlign": "top",
                                  }
                                }
                              >
                                "
                              </span>
                              <span>
                                anchors
                              </span>
                              <span
                                style={
                                  Object {
                                    "verticalAlign": "top",
                                  }
                                }
                              >
                                "
                              </span>
                            </span>
                            <span
                              style={
                                Object {
                                  "color": "#002b36",
                                  "display": "inline-block",
                                  "margin": "0px 5px",
                                  "verticalAlign": "top",
                                }
                              }
                            >
                              :
                            </span>
                          </span>
                          <span
                            style={
                              Object {
                                "color": "#002b36",
                                "cursor": "pointer",
                                "display": "inline-block",
                                "fontWeight": "bold",
                              }
                            }
                          >
                            [
                          </span>
                        </span>
                      </span>
                      <div
                        className="node-ellipsis"
                        onClick={[Function]}
                        style={
                          Object {
                            "color": "#cb4b16",
                            "cursor": "pointer",
                            "display": "inline-block",
                            "fontSize": "18px",
                            "lineHeight": "10px",
                          }
                        }
                      >
                        ...
                      </div>
                      <span
                        className="brace-row"
                      >
                        <span
                          style={
                            Object {
                              "color": "#002b36",
                              "cursor": "pointer",
                              "display": "inline-block",
                              "fontWeight": "bold",
                              "paddingLeft": "0px",
                            }
                          }
                        >
                          ]
                        </span>
                        <div
                          className="object-meta-data"
                          onClick={[Function]}
                          style={
                            Object {
                              "display": "inline-block",
                              "padding": "0px 0px 0px 10px",
                            }
                          }
                        >
                          <span
                            className="click-to-add"
                            style={
                              Object {
                                "verticalAlign": "top",
                              }
                            }
                          >
                            <span
                              className="click-to-add-icon"
                              onClick={[Function]}
                            >
                              <svg
                                fill="currentColor"
                                preserveAspectRatio="xMidYMid meet"
                                style={
                                  Object {
                                    "color": "#2aa198",
                                    "cursor": "pointer",
                                    "display": "inline-block",
                                    "fontSize": "15px",
                                    "height": "1em",
                                    "marginRight": "3px",
                                    "verticalAlign": "top",
                                    "width": "1em",
                                  }
                                }
                                viewBox="0 0 40 40"
                              >
                                <g>
                                  <path
                                    d="m30.1 21.4v-2.8q0-0.6-0.4-1t-1-0.5h-5.7v-5.7q0-0.6-0.4-1t-1-0.4h-2.9q-0.6 0-1 0.4t-0.4 1v5.7h-5.7q-0.6 0-1 0.5t-0.5 1v2.8q0 0.6 0.5 1t1 0.5h5.7v5.7q0 0.5 0.4 1t1 0.4h2.9q0.6 0 1-0.4t0.4-1v-5.7h5.7q0.6 0 1-0.5t0.4-1z m7.2-1.4q0 4.7-2.3 8.6t-6.3 6.2-8.6 2.3-8.6-2.3-6.2-6.2-2.3-8.6 2.3-8.6 6.2-6.2 8.6-2.3 8.6 2.3 6.3 6.2 2.3 8.6z"
                                  />
                                </g>
                              </svg>
                            </span>
                          </span>
                          <span
                            className="click-to-remove"
                          >
                            <span
                              className="click-to-remove-icon"
                              onClick={[Function]}
                            >
                              <svg
                                fill="currentColor"
                                preserveAspectRatio="xMidYMid meet"
                                style={
                                  Object {
                                    "color": "#cb4b16",
                                    "cursor": "pointer",
                                    "display": "inline-block",
                                    "fontSize": "15px",
                                    "height": "1em",
                                    "marginRight": "3px",
                                    "verticalAlign": "top",
                                    "width": "1em",
                                  }
                                }
                                viewBox="0 0 40 40"
                              >
                                <g>
                                  <path
                                    d="m28.6 25q0-0.5-0.4-1l-4-4 4-4q0.4-0.5 0.4-1 0-0.6-0.4-1.1l-2-2q-0.4-0.4-1-0.4-0.6 0-1 0.4l-4.1 4.1-4-4.1q-0.4-0.4-1-0.4-0.6 0-1 0.4l-2 2q-0.5 0.5-0.5 1.1 0 0.5 0.5 1l4 4-4 4q-0.5 0.5-0.5 1 0 0.7 0.5 1.1l2 2q0.4 0.4 1 0.4 0.6 0 1-0.4l4-4.1 4.1 4.1q0.4 0.4 1 0.4 0.6 0 1-0.4l2-2q0.4-0.4 0.4-1z m8.7-5q0 4.7-2.3 8.6t-6.3 6.2-8.6 2.3-8.6-2.3-6.2-6.2-2.3-8.6 2.3-8.6 6.2-6.2 8.6-2.3 8.6 2.3 6.3 6.2 2.3 8.6z"
                                  />
                                </g>
                              </svg>
                            </span>
                          </span>
                        </div>
                      </span>
                    </div>
                    <div
                      className="object-key-val"
                      style={
                        Object {
                          ":hover": Object {
                            "borderLeft": "2px solid rgb(235, 235, 235)",
                            "paddingLeft": "19px",
                          },
                          "borderLeft": "1px solid rgb(235, 235, 235)",
                          "paddingBottom": "3px",
                          "paddingLeft": 20,
                          "paddingRight": "5px",
                          "paddingTop": "3px",
                        }
                      }
                    >
                      <span>
                        <span
                          onClick={[Function]}
                          style={
                            Object {
                              "cursor": "pointer",
                              "display": "inline-block",
                            }
                          }
                        >
                          <div
                            className="icon-container"
                            style={
                              Object {
                                "display": "inline-block",
                                "width": "17px",
                              }
                            }
                          >
                            <span
                              className="collapsed-icon"
                            >
                              <svg
                                fill="currentColor"
                                preserveAspectRatio="xMidYMid meet"
                                style={
                                  Object {
                                    "color": "#2aa198",
                                    "height": "1em",
                                    "verticalAlign": "middle",
                                    "width": "1em",
                                  }
                                }
                                viewBox="0 0 24 24"
                              >
                                <path
                                  d="M12,20C7.59,20 4,16.41 4,12C4,7.59 7.59,4 12,4C16.41,4 20,7.59 20,12C20,16.41 16.41,20 12,20M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2M13,7H11V11H7V13H11V17H13V13H17V11H13V7Z"
                                />
                              </svg>
                            </span>
                          </div>
                          <span
                            style={
                              Object {
                                ":hover": Object {
                                  "opacity": "1",
                                },
                                "color": "#002b36",
                                "display": "inline-block",
                                "fontStyle": "none",
                                "letterSpacing": "0.5px",
                                "opacity": "0.85",
                                "verticalAlign": "top",
                              }
                            }
                          >
                            <span
                              className="object-key"
                            >
                              <span
                                style={
                                  Object {
                                    "verticalAlign": "top",
                                  }
                                }
                              >
                                "
                              </span>
                              <span>
                                overlays
                              </span>
                              <span
                                style={
                                  Object {
                                    "verticalAlign": "top",
                                  }
                                }
                              >
                                "
                              </span>
                            </span>
                            <span
                              style={
                                Object {
                                  "color": "#002b36",
                                  "display": "inline-block",
                                  "margin": "0px 5px",
                                  "verticalAlign": "top",
                                }
                              }
                            >
                              :
                            </span>
                          </span>
                          <span
                            style={
                              Object {
                                "color": "#002b36",
                                "cursor": "pointer",
                                "display": "inline-block",
                                "fontWeight": "bold",
                              }
                            }
                          >
                            [
                          </span>
                        </span>
                      </span>
                      <div
                        className="node-ellipsis"
                        onClick={[Function]}
                        style={
                          Object {
                            "color": "#cb4b16",
                            "cursor": "pointer",
                            "display": "inline-block",
                            "fontSize": "18px",
                            "lineHeight": "10px",
                          }
                        }
                      >
                        ...
                      </div>
                      <span
                        className="brace-row"
                      >
                        <span
                          style={
                            Object {
                              "color": "#002b36",
                              "cursor": "pointer",
                              "display": "inline-block",
                              "fontWeight": "bold",
                              "paddingLeft": "0px",
                            }
                          }
                        >
                          ]
                        </span>
                        <div
                          className="object-meta-data"
                          onClick={[Function]}
                          style={
                            Object {
                              "display": "inline-block",
                              "padding": "0px 0px 0px 10px",
                            }
                          }
                        >
                          <span
                            className="click-to-add"
                            style={
                              Object {
                                "verticalAlign": "top",
                              }
                            }
                          >
                            <span
                              className="click-to-add-icon"
                              onClick={[Function]}
                            >
                              <svg
                                fill="currentColor"
                                preserveAspectRatio="xMidYMid meet"
                                style={
                                  Object {
                                    "color": "#2aa198",
                                    "cursor": "pointer",
                                    "display": "inline-block",
                                    "fontSize": "15px",
                                    "height": "1em",
                                    "marginRight": "3px",
                                    "verticalAlign": "top",
                                    "width": "1em",
                                  }
                                }
                                viewBox="0 0 40 40"
                              >
                                <g>
                                  <path
                                    d="m30.1 21.4v-2.8q0-0.6-0.4-1t-1-0.5h-5.7v-5.7q0-0.6-0.4-1t-1-0.4h-2.9q-0.6 0-1 0.4t-0.4 1v5.7h-5.7q-0.6 0-1 0.5t-0.5 1v2.8q0 0.6 0.5 1t1 0.5h5.7v5.7q0 0.5 0.4 1t1 0.4h2.9q0.6 0 1-0.4t0.4-1v-5.7h5.7q0.6 0 1-0.5t0.4-1z m7.2-1.4q0 4.7-2.3 8.6t-6.3 6.2-8.6 2.3-8.6-2.3-6.2-6.2-2.3-8.6 2.3-8.6 6.2-6.2 8.6-2.3 8.6 2.3 6.3 6.2 2.3 8.6z"
                                  />
                                </g>
                              </svg>
                            </span>
                          </span>
                          <span
                            className="click-to-remove"
                          >
                            <span
                              className="click-to-remove-icon"
                              onClick={[Function]}
                            >
                              <svg
                                fill="currentColor"
                                preserveAspectRatio="xMidYMid meet"
                                style={
                                  Object {
                                    "color": "#cb4b16",
                                    "cursor": "pointer",
                                    "display": "inline-block",
                                    "fontSize": "15px",
                                    "height": "1em",
                                    "marginRight": "3px",
                                    "verticalAlign": "top",
                                    "width": "1em",
                                  }
                                }
                                viewBox="0 0 40 40"
                              >
                                <g>
                                  <path
                                    d="m28.6 25q0-0.5-0.4-1l-4-4 4-4q0.4-0.5 0.4-1 0-0.6-0.4-1.1l-2-2q-0.4-0.4-1-0.4-0.6 0-1 0.4l-4.1 4.1-4-4.1q-0.4-0.4-1-0.4-0.6 0-1 0.4l-2 2q-0.5 0.5-0.5 1.1 0 0.5 0.5 1l4 4-4 4q-0.5 0.5-0.5 1 0 0.7 0.5 1.1l2 2q0.4 0.4 1 0.4 0.6 0 1-0.4l4-4.1 4.1 4.1q0.4 0.4 1 0.4 0.6 0 1-0.4l2-2q0.4-0.4 0.4-1z m8.7-5q0 4.7-2.3 8.6t-6.3 6.2-8.6 2.3-8.6-2.3-6.2-6.2-2.3-8.6 2.3-8.6 6.2-6.2 8.6-2.3 8.6 2.3 6.3 6.2 2.3 8.6z"
                                  />
                                </g>
                              </svg>
                            </span>
                          </span>
                        </div>
                      </span>
                    </div>
                    <div
                      className="object-key-val"
                      style={
                        Object {
                          ":hover": Object {
                            "borderLeft": "2px solid rgb(235, 235, 235)",
                            "paddingLeft": "19px",
                          },
                          "borderLeft": "1px solid rgb(235, 235, 235)",
                          "paddingBottom": "3px",
                          "paddingLeft": 20,
                          "paddingRight": "5px",
                          "paddingTop": "3px",
                        }
                      }
                    >
                      <span>
                        <span
                          onClick={[Function]}
                          style={
                            Object {
                              "cursor": "pointer",
                              "display": "inline-block",
                            }
                          }
                        >
                          <div
                            className="icon-container"
                            style={
                              Object {
                                "display": "inline-block",
                                "width": "17px",
                              }
                            }
                          >
                            <span
                              className="collapsed-icon"
                            >
                              <svg
                                fill="currentColor"
                                preserveAspectRatio="xMidYMid meet"
                                style={
                                  Object {
                                    "color": "#2aa198",
                                    "height": "1em",
                                    "verticalAlign": "middle",
                                    "width": "1em",
                                  }
                                }
                                viewBox="0 0 24 24"
                              >
                                <path
                                  d="M12,20C7.59,20 4,16.41 4,12C4,7.59 7.59,4 12,4C16.41,4 20,7.59 20,12C20,16.41 16.41,20 12,20M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2M13,7H11V11H7V13H11V17H13V13H17V11H13V7Z"
                                />
                              </svg>
                            </span>
                          </div>
                          <span
                            style={
                              Object {
                                ":hover": Object {
                                  "opacity": "1",
                                },
                                "color": "#002b36",
                                "display": "inline-block",
                                "fontStyle": "none",
                                "letterSpacing": "0.5px",
                                "opacity": "0.85",
                                "verticalAlign": "top",
                              }
                            }
                          >
                            <span
                              className="object-key"
                            >
                              <span
                                style={
                                  Object {
                                    "verticalAlign": "top",
                                  }
                                }
                              >
                                "
                              </span>
                              <span>
                                connector
                              </span>
                              <span
                                style={
                                  Object {
                                    "verticalAlign": "top",
                                  }
                                }
                              >
                                "
                              </span>
                            </span>
                            <span
                              style={
                                Object {
                                  "color": "#002b36",
                                  "display": "inline-block",
                                  "margin": "0px 5px",
                                  "verticalAlign": "top",
                                }
                              }
                            >
                              :
                            </span>
                          </span>
                          <span
                            style={
                              Object {
                                "color": "#002b36",
                                "cursor": "pointer",
                                "display": "inline-block",
                                "fontWeight": "bold",
                              }
                            }
                          >
                            [
                          </span>
                        </span>
                      </span>
                      <div
                        className="node-ellipsis"
                        onClick={[Function]}
                        style={
                          Object {
                            "color": "#cb4b16",
                            "cursor": "pointer",
                            "display": "inline-block",
                            "fontSize": "18px",
                            "lineHeight": "10px",
                          }
                        }
                      >
                        ...
                      </div>
                      <span
                        className="brace-row"
                      >
                        <span
                          style={
                            Object {
                              "color": "#002b36",
                              "cursor": "pointer",
                              "display": "inline-block",
                              "fontWeight": "bold",
                              "paddingLeft": "0px",
                            }
                          }
                        >
                          ]
                        </span>
                        <div
                          className="object-meta-data"
                          onClick={[Function]}
                          style={
                            Object {
                              "display": "inline-block",
                              "padding": "0px 0px 0px 10px",
                            }
                          }
                        >
                          <span
                            className="click-to-add"
                            style={
                              Object {
                                "verticalAlign": "top",
                              }
                            }
                          >
                            <span
                              className="click-to-add-icon"
                              onClick={[Function]}
                            >
                              <svg
                                fill="currentColor"
                                preserveAspectRatio="xMidYMid meet"
                                style={
                                  Object {
                                    "color": "#2aa198",
                                    "cursor": "pointer",
                                    "display": "inline-block",
                                    "fontSize": "15px",
                                    "height": "1em",
                                    "marginRight": "3px",
                                    "verticalAlign": "top",
                                    "width": "1em",
                                  }
                                }
                                viewBox="0 0 40 40"
                              >
                                <g>
                                  <path
                                    d="m30.1 21.4v-2.8q0-0.6-0.4-1t-1-0.5h-5.7v-5.7q0-0.6-0.4-1t-1-0.4h-2.9q-0.6 0-1 0.4t-0.4 1v5.7h-5.7q-0.6 0-1 0.5t-0.5 1v2.8q0 0.6 0.5 1t1 0.5h5.7v5.7q0 0.5 0.4 1t1 0.4h2.9q0.6 0 1-0.4t0.4-1v-5.7h5.7q0.6 0 1-0.5t0.4-1z m7.2-1.4q0 4.7-2.3 8.6t-6.3 6.2-8.6 2.3-8.6-2.3-6.2-6.2-2.3-8.6 2.3-8.6 6.2-6.2 8.6-2.3 8.6 2.3 6.3 6.2 2.3 8.6z"
                                  />
                                </g>
                              </svg>
                            </span>
                          </span>
                          <span
                            className="click-to-remove"
                          >
                            <span
                              className="click-to-remove-icon"
                              onClick={[Function]}
                            >
                              <svg
                                fill="currentColor"
                                preserveAspectRatio="xMidYMid meet"
                                style={
                                  Object {
                                    "color": "#cb4b16",
                                    "cursor": "pointer",
                                    "display": "inline-block",
                                    "fontSize": "15px",
                                    "height": "1em",
                                    "marginRight": "3px",
                                    "verticalAlign": "top",
                                    "width": "1em",
                                  }
                                }
                                viewBox="0 0 40 40"
                              >
                                <g>
                                  <path
                                    d="m28.6 25q0-0.5-0.4-1l-4-4 4-4q0.4-0.5 0.4-1 0-0.6-0.4-1.1l-2-2q-0.4-0.4-1-0.4-0.6 0-1 0.4l-4.1 4.1-4-4.1q-0.4-0.4-1-0.4-0.6 0-1 0.4l-2 2q-0.5 0.5-0.5 1.1 0 0.5 0.5 1l4 4-4 4q-0.5 0.5-0.5 1 0 0.7 0.5 1.1l2 2q0.4 0.4 1 0.4 0.6 0 1-0.4l4-4.1 4.1 4.1q0.4 0.4 1 0.4 0.6 0 1-0.4l2-2q0.4-0.4 0.4-1z m8.7-5q0 4.7-2.3 8.6t-6.3 6.2-8.6 2.3-8.6-2.3-6.2-6.2-2.3-8.6 2.3-8.6 6.2-6.2 8.6-2.3 8.6 2.3 6.3 6.2 2.3 8.6z"
                                  />
                                </g>
                              </svg>
                            </span>
                          </span>
                        </div>
                      </span>
                    </div>
                  </div>
                </div>
                <span
                  className="brace-row"
                >
                  <span
                    style={
                      Object {
                        "color": "#002b36",
                        "cursor": "pointer",
                        "display": "inline-block",
                        "fontWeight": "bold",
                        "paddingLeft": "3px",
                      }
                    }
                  >
                    }
                  </span>
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        style={
          Object {
            "textAlign": "center",
          }
        }
      >
        <button
          onClick={[Function]}
        >
          apply
        </button>
        <button
          onClick={[Function]}
        >
          cancel
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`click to show new edge class editor 2`] = `
<div
  id="petc-edge-select-control"
>
  <ul>
    <li
      className={null}
      onClick={[Function]}
    >
      <div
        className="petc-edge-select-element"
      >
        <div
          className="petc-edge-select-node-a"
          id="petc-edge-select-element-default-a"
        />
        <div
          className="petc-edge-select-node-b"
          id="petc-edge-select-element-default-b"
        />
      </div>
      <div>
        default
      </div>
    </li>
    <li
      className={null}
      onClick={[Function]}
    >
      <div
        className="petc-edge-select-element"
      >
        <div
          className="petc-edge-select-node-a"
          id="petc-edge-select-element-red-edge-a"
        />
        <div
          className="petc-edge-select-node-b"
          id="petc-edge-select-element-red-edge-b"
        />
      </div>
      <div>
        red-edge
      </div>
    </li>
    <li
      className={null}
      onClick={[Function]}
    >
      <div
        className="petc-edge-select-element"
      >
        <div
          className="petc-edge-select-node-a"
          id="petc-edge-select-element-blue-edge-a"
        />
        <div
          className="petc-edge-select-node-b"
          id="petc-edge-select-element-blue-edge-b"
        />
      </div>
      <div>
        blue-edge
      </div>
    </li>
    <li
      onClick={[Function]}
    >
       + new 
    </li>
  </ul>
</div>
`;

exports[`shows custom edge styles 1`] = `
<div
  id="petc-edge-select-control"
>
  <ul>
    <li
      className={null}
      onClick={[Function]}
    >
      <div
        className="petc-edge-select-element"
      >
        <div
          className="petc-edge-select-node-a"
          id="petc-edge-select-element-default-a"
        />
        <div
          className="petc-edge-select-node-b"
          id="petc-edge-select-element-default-b"
        />
      </div>
      <div>
        default
      </div>
    </li>
    <li
      className={null}
      onClick={[Function]}
    >
      <div
        className="petc-edge-select-element"
      >
        <div
          className="petc-edge-select-node-a"
          id="petc-edge-select-element-red-edge-a"
        />
        <div
          className="petc-edge-select-node-b"
          id="petc-edge-select-element-red-edge-b"
        />
      </div>
      <div>
        red-edge
      </div>
    </li>
    <li
      className={null}
      onClick={[Function]}
    >
      <div
        className="petc-edge-select-element"
      >
        <div
          className="petc-edge-select-node-a"
          id="petc-edge-select-element-blue-edge-a"
        />
        <div
          className="petc-edge-select-node-b"
          id="petc-edge-select-element-blue-edge-b"
        />
      </div>
      <div>
        blue-edge
      </div>
    </li>
    <li
      onClick={[Function]}
    >
       + new 
    </li>
  </ul>
</div>
`;

exports[`visible when edge view mode 1`] = `
<div
  id="petc-edge-select-control"
>
  <ul>
    <li
      className={null}
      onClick={[Function]}
    >
      <div
        className="petc-edge-select-element"
      >
        <div
          className="petc-edge-select-node-a"
          id="petc-edge-select-element-default-a"
        />
        <div
          className="petc-edge-select-node-b"
          id="petc-edge-select-element-default-b"
        />
      </div>
      <div>
        default
      </div>
    </li>
    <li
      onClick={[Function]}
    >
       + new 
    </li>
  </ul>
</div>
`;
